--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -32,7 +32,7 @@
     {% endif %}
     <section class="images-section flex jc ac mt25px">
         <section class="sorting-section">
-            <ul class="sort-list fr">
+            <ul class="sort-list flex fr">
                 <li class="sort-item active p10px"><button class="button">date</button></li>
                 <li class="sort-item p10px"><button class="button">downloads</button></li>
                 <li class="sort-item p10px"><button class="button">rating</button></li>
