--- a/static/css/reset.css
+++ b/static/css/reset.css
@@ -28,5 +28,7 @@ a {
     text-decoration: unset;
 }
 input, button, textarea, select {
+    background: unset;
+    border: unset;
     font: inherit;
 }
