ajax sorting and find

--- a/main/templates/add.html
+++ b/main/templates/add.html
@@ -35,6 +35,7 @@
 {% endblock content %}
 
 {% block js %}
-    <script src="{% static 'js/view_uploaded_image.js' %}"></script>
+    <script src="{% static 'js/modules/functions/view_uploaded_image.js' %}"></script>
+    <script src="{% static 'js/add_image.js' %}"></script>
     {{ image_form.media }}
 {% endblock %}
