--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -12,7 +12,7 @@
         {% if message %}
             <h2 class="cg mt15px">{{ message }}</h2>
         {% endif %}
-        <form method="post" class="auth-form flex jc mt25px">
+        <form action="{% url 'accounts:login' %}" method="post" class="auth-form flex jc mt25px">
             {% csrf_token %}
             {% if form.errors %}
                 {% for field in form %}
