--- a/templates/base.html
+++ b/templates/base.html
@@ -1,13 +1,12 @@
 {% load static %}
 <!doctype html>
-<html lang="ru">
+<html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport"
-              content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         {% block meta_content %}{% endblock meta_content %}
-        <title> {% block title %}{% endblock title %} </title>
+        <title>{% block title %}{% endblock title %}</title>
         <link rel="stylesheet" href="{% static "css/reset.css" %}">
         <link rel="stylesheet" href="{% static "css/fonts/Roboto/stylesheet.css" %}">
         <link rel="stylesheet" href="{% static "css/index.css" %}">
@@ -15,12 +14,12 @@
     </head>
     <body>
         {% include 'header.html' %}
-
         {% block content %}{% endblock %}
-
         {% include 'footer.html' %}
 
-        <script src="{% static 'js/jquery-3.6.0.min.js' %}"></script>
-        {% block js %}{% endblock js %}
+        <script src="{% static 'js/modules/libs/jquery-3.6.0.min.js' %}"></script>
+        <script src="{% static 'js/modules/functions/cookie.js' %}"></script>
+        <script src="{% static 'js/modules/classes/HttpRequestsHelper.js' %}"></script>
+        {% block js %}{% endblock %}
     </body>
 </html>
