--- a/main/templates/cabinet.html
+++ b/main/templates/cabinet.html
@@ -10,7 +10,7 @@
     <section class="image-search-section mt50px">
         <form action="{% url 'main:cabinet' username=user %}" method="GET" class="image-search__form">
             <label class="rounded-input-container flex js ac">
-                <input name="search" class="p14px" type="text" placeholder="Something of your photos.." />
+                <input name="search" class="p14px" type="text" placeholder="Something of your photos.."/>
                 <button class="button ml5px">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                         <path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
@@ -19,79 +19,37 @@
             </label>
         </form>
     </section>
-    {% if 0 %}
-        <section class="image-detail mt50px">
-            <div class="top-content">
-                <img class="preview-image" src="img/1.jpg" alt="tag tag tag tag" />
+    <section class="account-section flex jc ac mt50px">
+        <div class="panel flex jc ac p10px">
+            <div class="account-section__info flex jc ac pr10px">
+                <img class="avatar" src="{{ user.profile.photo.url }}"/>
+                <p class="account__nickname ml10px">{{ user.first_name }} {{ user.last_name }}</p>
             </div>
-            <div class="bottom-content mt5px">
-                <div class="image-detail-panel mb20px">
-                    <a class="account" href="cabinet.html">
-                        <img class="account__image small" src="img/goose.jpg" alt="Account image" />
-                        <p class="account__nickname ml5rem">TestNick</p>
-                    </a>
-                    <div class="download-wrapper">
-                        <button class="report mr15px">Report</button>
-                        <button class="approve">Approve</button>
-                        <button class="replace-image ml15px">Replace image</button>
-                    </div>
-                </div>
-                <div class="bottom-content">
-                    <div class="tags-panel flex js ac">
-                        <div class="tag flex js ac mr5px">
-                            <button class="delete-tag mr5px">-</button>
-                            <button class="tag-name">tag</button>
-                        </div>
-                        <div class="tag flex js ac mr5px">
-                            <button class="delete-tag mr5px">-</button>
-                            <button class="tag-name">tag</button>
-                        </div>
-                        <div class="tag flex js ac mr5px">
-                            <button class="delete-tag mr5px">-</button>
-                            <button class="tag-name">tag</button>
-                        </div>
-                        <button class="add-tag ml5px">+</button>
-                    </div>
-                    <div class="colors-panel flex js ac mt15px">
-                        <span class="colors-span">Colors:</span>
-                        <button class="color ml5px" style="background: #0064f9"></button>
-                        <button class="color ml5px" style="background: cornflowerblue"></button>
-                        <button class="color ml5px" style="background: darkkhaki"></button>
-                    </div>
-                </div>
+            <div class="account-section__options">
+                <a class="p10px" href="{% url 'main:add_image' %}">Add image</a>
+                <a class="p10px" href="{% url 'accounts:settings' %}">Settings</a>
+                {% if moderator %}
+                    <a class="p10px" href="{% url 'main:moderator-panel' %}">Moderator panel</a>
+                {% endif %}
             </div>
-        </section>
-    {% else %}
-        <section class="account-section flex jc ac mt50px">
-            <div class="panel flex jc ac p10px">
-                <div class="account-section__info flex jc ac pr10px">
-                    {% if profile_form.photo %}
-                        <img class="avatar" src="{{ user.profile.photo.url }}" />
-                    {% else %}
-                        <img class="avatar" src="{% static 'img/goose.jpg' %}" />
-                    {% endif %}
-                    <p class="account__nickname ml10px">{{ user.first_name }} {{ user.last_name }}</p>
-                </div>
-                <div class="account-section__options">
-                    <a href="{% url 'main:add_image' %}" class="p10px">Add image</a>
-                    <a class="p10px" href="{% url 'accounts:settings' %}">Settings</a>
-                </div>
-            </div>
-        </section>
-        <section class="images-section flex jc ac">
-            {% if images_list %}
-                 <ul class="images-list flex js as mt50px">
-                    {% for column in columns %}
-                        <li class="image-column"></li>
-                    {% endfor %}
-                    {% include "image-block.html" with images=images_list %}
-                 </ul>
-                {% include "pagination.html" with page=images_list %}
-            {% else %}
-                <h1 class="mt50px mb20px">You have no images. To upload an image go to <a style="text-decoration: underline" href="{% url 'main:add_image' %}">Upload Images.</a></h1>
-            {% endif %}
-        </section>
-    {% endif %}
+        </div>
+    </section>
+    <section class="images-section flex jc ac">
+        {% include "messages.html" with messages=messages %}
+        {% if images_list %}
+            <ul class="images-list flex js as mt50px">
+                {% for column in columns %}
+                    <li class="image-column"></li>
+                {% endfor %}
+                {% include "image-block.html" with images=images_list %}
+            </ul>
+            {% include "pagination.html" with page=images_list %}
+        {% else %}
+            <h1 class="mt50px mb20px">You have no images. To upload an image go to <a style="text-decoration: underline"
+                                                                                      href="{% url 'main:add_image' %}">Upload
+                Images.</a></h1>
+        {% endif %}
+    </section>
 {% endblock content %}
 {% block js %}
     <script src="{% static 'js/modules/functions/image_columns.js' %}"></script>
