--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -9,6 +9,7 @@
 {% block content %}
     <section class="auth-section flex jc ac mt25px">
         <h1 class="mt25px">Welcome Back To Godsfon</h1>
+        {% include "messages.html" with messages=messages %}
         {% if message %}
             <h2 class="cg mt15px">{{ message }}</h2>
         {% endif %}
@@ -31,6 +32,7 @@
                 <div class="sqr-input-container mt15px">
                     {{ form.password }}
                 </div>
+                <div class="mt15px g-recaptcha" data-sitekey="6Lecnb0aAAAAAHafnFtb-7NZUQj0GYOEmB8Fh6lS"></div>
                 <button class="auth-form__enter-btn button button--green p06rem mt15px" type="submit">Enter</button>
             </div>
             <h3 class="auth-form__or cg mt15px">OR</h3>
@@ -44,3 +46,6 @@
         <a class="cg mt15px" href="{% url "accounts:reset_password" %}">Forgot password?</a>
     </section>
 {% endblock content %}
+{% block js %}
+    <script src='https://www.google.com/recaptcha/api.js'></script>
+{% endblock %}
