--- a/accounts/templates/registration.html
+++ b/accounts/templates/registration.html
@@ -8,6 +8,7 @@
 
 {% block content %}
     <section class="auth-section flex jc ac">
+        {% include "messages.html" with messages=messages %}
         {% if message %}
             <h1 class="mt50px">{{ message }}</h1>
         {% else %}
@@ -42,6 +43,7 @@
                     <div class="sqr-input-container mt15px">
                         {{ user_form.password2 }}
                     </div>
+                    <div class="mt15px g-recaptcha" data-sitekey="6Lecnb0aAAAAAHafnFtb-7NZUQj0GYOEmB8Fh6lS"></div>
                     <button class="auth-form__enter-btn button button--green p06rem mt15px" type="submit">Sign up</button>
                 </div>
                 <h3 class="auth-form__or cg mt15px">OR</h3>
@@ -55,3 +57,6 @@
         {% endif %}
     </section>
 {% endblock content %}
+{% block js %}
+    <script src='https://www.google.com/recaptcha/api.js'></script>
+{% endblock %}
