--- a/accounts/templates/reset_password_form.html
+++ b/accounts/templates/reset_password_form.html
@@ -6,6 +6,7 @@
 
 {% block content %}
     <section class="auth-section flex jc ac mt50px">
+        {% include "messages.html" with messages=messages %}
         <h1>Password reset</h1>
         <h3 class="cg">{{ message }}</h3>
         <form method="post" class="auth-form flex jc">
@@ -15,8 +16,12 @@
                 <label class="sqr-input-container">
                     {{ email_form.email }}
                 </label>
+                <div class="mt15px g-recaptcha" data-sitekey="6Lecnb0aAAAAAHafnFtb-7NZUQj0GYOEmB8Fh6lS"></div>
                 <button class="button button--blue large mt15px" type="submit">Send email</button>
             </div>
         </form>
     </section>
+{% endblock %}
+{% block js %}
+    <script src='https://www.google.com/recaptcha/api.js'></script>
 {% endblock %}
