--- a/accounts/templates/registration.html
+++ b/accounts/templates/registration.html
@@ -11,7 +11,7 @@
         {% if messages %}
             {% include "messages.html" with messages=messages %}
         {% else %}
-            <h1>Welcome to Godsfon</h1>
+            <h1>Welcome to {{ SITE_TITLE }}</h1>
             {% if user_form.errors %}
                 {% for field in user_form %}
                     {% for error in field.errors %}
