--- a/templates/header.html
+++ b/templates/header.html
@@ -1,6 +1,6 @@
 {% load static %}
 <header class="main-header m5px">
-    <a class="logo-link ml10px" href="/">GodsFon</a>
+    <a class="logo-link ml10px" href="/">{{ SITE_TITLE }}</a>
     {% if request.user.is_authenticated %}
         <a class="account-info flex jc ac mlA mr10px" href="{% url 'main:cabinet' %}">
             <img class="avatar" src="{{ user.profile.photo.url }}" />
