--- a/main/templates/user_agreements.html
+++ b/main/templates/user_agreements.html
@@ -7,6 +7,7 @@
 {% endblock title %}
 
 {% block content %}
+    {% include 'header.html' %}
     <section class="user-agreements">
         <div class="flex jc">
             <h1>Пользовательское соглашение</h1>
@@ -101,4 +102,5 @@
             <br>
         </div>
     </section>
+    {% include 'footer.html' %}
 {% endblock content %}
