--- a/main/templates/cabinet.html
+++ b/main/templates/cabinet.html
@@ -7,9 +7,10 @@
 {% endblock title %}
 
 {% block content %}
+    {% include 'header.html' %}
     <section class="image-search-section mt50px">
         <form action="{% url 'main:cabinet' username=user %}" method="GET" class="image-search__form">
-            <label class="rounded-input-container flex js ac">
+            <label class="rounded-input-container flex js ac search-input-container">
                 <input name="search" class="p14px" type="text" placeholder="Something of your photos.."/>
                 <button class="button ml5px">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
@@ -50,9 +51,11 @@
                 Images.</a></h1>
         {% endif %}
     </section>
+    {% include 'footer.html' %}
 {% endblock content %}
 {% block js %}
-    <script src="{% static 'js/modules/functions/image_columns.js' %}"></script>
-    <script src="{% static 'js/modules/classes/ImageSortApi.js' %}"></script>
-    <script src="{% static 'js/cabinet.js' %}"></script>
+    <script src="{% static 'js/modules/classes/ImagePutApi.js' %}"></script>
+    <script src="{% static 'js/modules/functions/sort.js' %}"></script>
+    <script src="{% static 'js/modules/functions/image_put.js' %}"></script>
+    <script src="{% static 'js/pages/main/cabinet.js' %}"></script>
 {% endblock %}
