--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -8,10 +8,11 @@
 {% endblock title %}
 
 {% block content %}
+    {% include 'header.html' %}
     <section class="image-search-section mt50px">
-        <label class="rounded-input-container flex js ac">
+        <label class="rounded-input-container flex js ac search-input-container">
             <input name="search" class="search-input p14px" type="text" placeholder="Something.."/>
-            <button class="button ml5px find-button sort-in" data-keys-handler="search-input">
+            <button class="button ml5px find-button q-where" data-keys-handler="search-input">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                     <path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
                 </svg>
@@ -22,7 +23,7 @@
     {% if common_tags %}
         {% get_tag_weight common_tags as tags %}
         {% for tag in tags %}
-            <div class="button tag-name mr5px find-button sort-in" href="{% url "main:home" %}?tags={{ tag.slug }}" data-keys-handler="{{ tag.slug }}">
+            <div class="button tag-name mr5px find-button q-where" href="{% url "main:home" %}?tags={{ tag.slug }}" data-keys-handler="{{ tag.slug }}">
                 <span class="{{ tag.slug }}" style="font-size: {{tag.weight|floatformat:0}}px;" data-keys="{{ tag.slug }}">{{ tag }}</span>
             </div>
         {% endfor %}
@@ -38,36 +39,36 @@
         {% include 'messages.html' with messages=messages %}
         <section class="sorting-section flex jc">
             <div class="sort-list flex">
-                <button class="sort-item flex jc ac sort-date" data-less-than="2022-12-31" data-more-than="2020-12-31" data-order="">
-                    <span class="sort-text active ml5px">date</span>
-                    <svg class="down-arrow active" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"></path></svg>
+                <button class="sort-item flex jc ac q-date sort-active" data-less-than="2022-12-31" data-more-than="2020-12-31" data-order="">
+                    <span class="sort-text ml5px">date</span>
+                    <svg class="sort-down-arrow rotate0" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"></path></svg>
                 </button>
-                <button class="sort-item flex jc ac sort-downloads" data-more-than="0" data-order="-">
+                <button class="sort-item flex jc ac q-downloads" data-more-than="0" data-order="-">
                     <span class="sort-text">downloads</span>
-                    <svg class="down-arrow disabled" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"></path></svg>
+                    <svg class="sort-down-arrow" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"></path></svg>
                 </button>
-                <button class="sort-item flex jc ac sort-rating" data-more-than="0" data-order="-">
+                <button class="sort-item flex jc ac q-rating" data-more-than="0" data-order="-">
                     <span class="sort-text">rating</span>
-                    <svg class="down-arrow disabled" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"></path></svg>
+                    <svg class="sort-down-arrow" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"></path></svg>
                 </button>
             </div>
-            <div class="sort-list flex je ac" data-drop-list-id="drop-list-screen">
-                <span class="sort-item sort-text p10px">screen:</span>
-                <div class="sort-item flex fc">
-                    <button class="sort-text">all</button>
+            <div class="filter-list flex je ac" data-drop-list-id="drop-list-screen">
+                <span class="filter-item filter-text p10px">screen:</span>
+                <div class="filter-item flex fc">
+                    <button class="filter-text">all</button>
                 </div>
                 <div id="drop-list-screen" class="screen drop-list dn">
                     <div class="screen-size-inputs flex jsb ac">
-                        <span class="min-image-width sort-text ml15px" contenteditable="true" data-more-than="self">1024</span>
+                        <span class="min-image-width filter-text ml15px" contenteditable="true" data-more-than="self">1024</span>
                         <span>x</span>
-                        <span class="min-image-height sort-text mr15px" contenteditable="true" data-more-than="self">1024</span>
+                        <span class="min-image-height filter-text mr15px" contenteditable="true" data-more-than="self">1024</span>
                     </div>
                     <div class="flex">
                         <div class="screen-size-options flex fc">
-                            <button class="sort-text mt15px sort-ratio" data-less-than="1">Desktop</button>
-                            <button class="sort-text mt5px sort-ratio" data-more-than="1">Phone</button>
+                            <button class="filter-text mt15px q-ratio" data-less-than="1">Desktop</button>
+                            <button class="filter-text mt5px q-ratio" data-more-than="1">Phone</button>
                         </div>
-                        <button class="button button--blue middle mt15px sort-screen" data-sort-redirect="min-image-width min-image-height">Find</button>
+                        <button class="button button--blue middle mt15px q-screen" data-q-redirect="min-image-width min-image-height">Find</button>
                     </div>
                 </div>
             </div>
@@ -84,12 +85,13 @@
             <h2 class="p16px">There are no images available.</h2>
         {% endif %}
     </section>
+    {% include 'footer.html' %}
 {% endblock content %}
 {% block js %}
-    <script src="{% static 'js/modules/classes/ImageSortApi.js' %}"></script>
+    <script src="{% static 'js/modules/classes/ImageQueryApi.js' %}"></script>
     <script src="{% static 'js/modules/classes/ImagePutApi.js' %}"></script>
     <script src="{% static 'js/modules/classes/UserActions.js' %}"></script>
-    <script src="{% static 'js/modules/functions/image_columns.js' %}"></script>
-    <script src="{% static 'js/modules/functions/change_order.js' %}"></script>
-    <script src="{% static 'js/home.js' %}"></script>
+    <script src="{% static 'js/modules/functions/sort.js' %}"></script>
+    <script src="{% static 'js/modules/functions/image_put.js' %}"></script>
+    <script src="{% static 'js/pages/main/home.js' %}"></script>
 {% endblock %}
