--- a/accounts/templates/reset_password_form.html
+++ b/accounts/templates/reset_password_form.html
@@ -6,8 +6,8 @@
 
 {% block content %}
     <section class="auth-section flex jc ac mt50px">
-        {% include "messages.html" with messages=messages %}
         <h1>Password reset</h1>
+        <h3 class="cg">{{ message }}</h3>
         <form method="post" class="auth-form flex jc">
             {% csrf_token %}
             <div class="auth-form__inputs flex jc mt25px">
@@ -15,12 +15,8 @@
                 <label class="sqr-input-container">
                     {{ email_form.email }}
                 </label>
-                <div class="mt15px g-recaptcha" data-sitekey="6Lecnb0aAAAAAHafnFtb-7NZUQj0GYOEmB8Fh6lS"></div>
                 <button class="button button--blue large mt15px" type="submit">Send email</button>
             </div>
         </form>
     </section>
-{% endblock %}
-{% block js %}
-    <script src='https://www.google.com/recaptcha/api.js'></script>
 {% endblock %}
