--- a/static/css/index.css
+++ b/static/css/index.css
@@ -399,7 +399,7 @@ input[type="file"] {
     width: 100%;
 }
 .image-detail > .flex {
-    width: 500px;
+    width: max-content;
     align-items: center;
     flex-direction: column;
 }
@@ -484,21 +484,17 @@ input[type="file"] {
     padding: unset !important;
 }
 .select2-selection__choice, .select2-search {
-    display: block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     padding: .5rem 1rem !important;
     background: unset !important;
     font-weight: bold;
     border: 1px solid #e8e8e8 !important;
     box-shadow: 0 1px 2px 0 rgb(0 0 5%) !important;
     border-radius: 6px !important;
-    max-width: 500px !important;
-    overflow: hidden !important;
-    text-overflow: ellipsis !important;
-    white-space: nowrap !important;
 }
 .select2-search {
-    display: flex;
-    align-items: center;
     margin-right: 5px;
     margin-top: 5px;
     position: relative;
@@ -580,9 +576,6 @@ input[type="file"] {
     color: RGBA(0,0,0,.5);
 }
 
-.add-images__form {
-    width: 500px;
-}
 .add-images-section {
     display: flex;
     align-items: center;
