report, information, fix bugs (#3)

--- a/accounts/templates/settings.html
+++ b/accounts/templates/settings.html
@@ -110,5 +110,6 @@
 {% endif %}
 {% endblock content %}
 {% block js %}
-    <script src="{% static 'js/view_uploaded_image.js' %}"></script>
+    <script src="{% static 'js/modules/functions/view_uploaded_image.js' %}"></script>
+    <script src="{% static 'js/pages/account/settings.js' %}"></script>
 {% endblock %}
