--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,79 +1,3 @@
-.m5px { margin: 5px; }
-
-.mlA { margin-left: auto; }
-.ml5px { margin-left: 5px; }
-.ml10px { margin-left: 10px; }
-.ml15px { margin-left: 15px; }
-.ml25px { margin-left: 25px; }
-.ml50px { margin-left: 50px; }
-.ml2per { margin-left: 2%; }
-.ml05rem { margin-left: .5rem; }
-
-.mr5px { margin-right: 5px; }
-.mr10px { margin-right: 10px; }
-.mr15px { margin-right: 15px; }
-.mr25px { margin-right: 25px; }
-.mr50px { margin-right: 50px; }
-.mr2per { margin-right: 2%; }
-
-.mt5px { margin-top: 5px; }
-.mt15px { margin-top: 15px; }
-.mt25px { margin-top: 25px; }
-.mt50px { margin-top: 50px; }
-
-.mb20px { margin-bottom: 20px; }
-.mb1per { margin-bottom: 1%; }
-
-.pr10px { padding-right: 10px; }
-
-.pb2px { padding: 2px; }
-
-.p10px { padding: 10px; }
-.p14px { padding: 14px; }
-.p16px { padding: 16px; }
-.p06rem { padding: .6rem; }
-.p08rem { padding: .8rem; }
-
-.dn {
-    display: none !important;
-}
-
-.rotate180 {
-    transform: rotateX(180deg);
-}
-
-.flex { display: flex; }
-.js { justify-content: start; }
-.jc { justify-content: center; }
-.je { justify-content: flex-end; }
-.jsb { justify-content: space-between; }
-.ac { align-items: center; }
-.fr { flex-direction: row; }
-.fc { flex-direction: column; }
-
-.cw { color: white; }
-.cg { color: RGBA(0,0,0,.4); }
-
-.blurred {
-    filter: blur(1px);
-}
-
-h1, h2, h3 {
-    font-size: 3rem;
-    font-weight: bold;
-    text-align: center;
-}
-h2 { font-size: 2rem; }
-h3 { font-size: 1.8rem; }
-img {
-    display: block;
-    position: relative;
-    max-height: 100%;
-    width: 100%;
-    max-width: 100%;
-    object-fit: cover;
-}
-
 .button {
     display: flex;
     justify-content: center;
@@ -169,12 +93,6 @@ img {
     border-left: 1px solid black;
 }
 
-.down-arrow.active {
-    fill: #0064f9;
-}
-.down-arrow.disabled {
-    display: none;
-}
 
 input[type="file"] {
     display: none;
@@ -193,7 +111,7 @@ input[type="file"] {
     display: flex;
     justify-content: start;
     align-items: center;
-    width: 290px;
+    width: 100%;
     font-weight: 300;
     border: 1px solid RGBA(0, 0, 0, 0.1);
     border-radius: 6px;
@@ -211,6 +129,9 @@ input[type="file"] {
     display: flex;
     justify-content: center;
     width: 100%;
+}
+.search-input-container {
+    width: 20rem;
 }
 
 .avatar {
@@ -273,23 +194,32 @@ input[type="file"] {
 .sorting-section {
     width: 100%;
 }
-.sort-list {
+.sort-list, .filter-list {
     width: 45%;
     position: relative;
 }
-.sort-text {
-    padding: .64rem;
+.sort-text, .filter-text {
     color: #5e5e5e;
+}
+.sort-text {
+    padding: .64rem 0.1rem calc(.64rem - 2px) .1rem;
+    border-bottom: 2px solid white;
     transition: .2s color ease;
 }
 .sort-text:hover {
     cursor: pointer;
     color: #0064f9;
 }
-.sort-text.active {
-    padding: .64rem 0.1rem calc(.64rem - 2px) .1rem;
-    border-bottom: 2px solid #0064f9;
+.sort-active > .sort-text {
     color: #0064f9;
+    border-color: #0064f9;
+}
+.sort-down-arrow {
+    transform: rotateX(-180deg);
+    fill: white;
+}
+.sort-active > .sort-down-arrow {
+    fill: #0064f9;
 }
 .drop-list {
     padding: 1rem;
@@ -377,14 +307,19 @@ input[type="file"] {
 .rating, .downloads {
     color: RGBA(255,255,255,.6);
 }
-.upvote-button, .download-button {
+.rating-button, .download-button {
     width: 1.5rem;
     height: 1.5rem;
     fill: RGBA(255,255,255,.6);
 }
-.upvote-button:hover, .download-button:hover {
+.rating-button:hover, .download-button:hover {
     fill: RGBA(255,255,255,.8);
 }
+.vote-inactive {
+    visibility: collapse;
+    display: none;
+}
+
 
 .pagination {
     color: #5e5e5e;
@@ -393,7 +328,44 @@ input[type="file"] {
     margin: 0 40px;
 }
 
+.report-wrapper {
+    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    background: RGBA(0,0,0,.5);
+    z-index: 2;
+}
+.report-form {
+    padding: 2rem;
+    border-radius: 4px;
+    border-right: 1px solid rgba(26,26,26,.15);
+    background: #fff;
+    box-shadow: 0 0 0 rgb(0 0 0 / 25%), 0 5px 6px rgb(0 0 0 / 22%);
+}
+.report-form > h3 {
+    text-align: start;
+}
+.report-form > textarea, .report-form > input {
+    padding: .6em;
+    position: relative;
+    min-width: 30rem;
+    border-radius: 3px;
+    border: 1px solid #e8e8e8;
+    vertical-align: middle;
+    -moz-appearance: textfield;
+    -webkit-appearance: textfield;
+}
+.report-description {
+    height: 30rem;
+}
 .image-detail {
+    position: relative;
     display: flex;
     justify-content: center;
     width: 100%;
@@ -407,7 +379,7 @@ input[type="file"] {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100%;
+    width: 30rem;
 }
 .image-detail__image {
     max-width: 50vh;
@@ -423,17 +395,42 @@ input[type="file"] {
     width: 3rem;
     z-index: 1;
 }
-.image-detail__image > img {
+.image-block {
+    position: relative;
+}
+.image-block > img {
     border-radius: 4px;
     box-shadow: 0 0 0 rgb(0 0 0 / 25%), 0 5px 6px rgb(0 0 0 / 22%);
+}
+.image-information {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: RGBA(255,255,255, .2);
+    z-index: 2;
+}
+.information-card {
+    margin-bottom: 50%;
+    max-width: 95%;
+    background: RGB(255,255,255);
+    padding: 2rem;
+    border-radius: 4px;
+}
+.image__title {
+    font-size: 3vh;
+    overflow-wrap: break-word;
+    text-align: start;
 }
 .bottom-image-options {
     position: absolute;
     width: 100%;
     bottom: 1rem;
-}
-.created-time {
-    color: RGBA(0, 0, 0, .65);
 }
 .report, .get-license {
     color: RGBA(0, 0, 0, .6);
@@ -445,6 +442,23 @@ input[type="file"] {
     width: 100%;
 }
 
+.edit-image__collision-wrapper {
+    position: relative;
+    width: calc(10rem + 15px);
+}
+.edit-image__panel {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    max-width: 100%;
+    border-radius: 4px;
+    border-right: 1px solid rgba(26,26,26,.15);
+    background: #fff;
+}
 .edit-tags {
     display: flex;
     flex-direction: column;
@@ -457,7 +471,15 @@ input[type="file"] {
     width: inherit;
 }
 .edit-tags__buttons {
+    padding: 1rem;
+    position: relative;
     display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+.edit-tags__option:hover {
+    color: #0064f9;
+    cursor: pointer;
 }
 .tags-panel {
     font-weight: 900;
@@ -596,6 +618,16 @@ input[type="file"] {
     display: flex;
     justify-content: center;
 }
+.image-title {
+    width: 100%;
+}
+.image-title > input {
+    padding: .5rem 1rem;
+    min-width: 5rem;
+    height: 2.63rem;
+    font-weight: 700;
+    color: RGB(51,51,51);
+}
 
 .settings-section, .settings-password-section {
     flex-direction: column;
@@ -638,4 +670,91 @@ input[type="file"] {
 /*image-block.html*/
 .image-item:hover > .image__panel > .image__options {
     display: flex;
+}
+
+
+/*Helpers*/
+.m5px { margin: 5px; }
+
+.mlA { margin-left: auto; }
+.ml5px { margin-left: 5px; }
+.ml10px { margin-left: 10px; }
+.ml15px { margin-left: 15px; }
+.ml25px { margin-left: 25px; }
+.ml50px { margin-left: 50px; }
+.ml2per { margin-left: 2%; }
+.ml05rem { margin-left: .5rem; }
+
+.mr5px { margin-right: 5px; }
+.mr10px { margin-right: 10px; }
+.mr15px { margin-right: 15px; }
+.mr25px { margin-right: 25px; }
+.mr50px { margin-right: 50px; }
+.mr2per { margin-right: 2%; }
+
+.mt5px { margin-top: 5px; }
+.mt15px { margin-top: 15px; }
+.mt25px { margin-top: 25px; }
+.mt50px { margin-top: 50px; }
+
+.mb20px { margin-bottom: 20px; }
+.mb1per { margin-bottom: 1%; }
+
+.pr10px { padding-right: 10px; }
+
+.pb2px { padding: 2px; }
+
+.p10px { padding: 10px; }
+.p14px { padding: 14px; }
+.p16px { padding: 16px; }
+.p06rem { padding: .6rem; }
+.p08rem { padding: .8rem; }
+
+.dn {
+    display: none;
+}
+
+.prel {
+    position: relative;
+}
+
+.rotate0 {
+    transform: rotateX(0deg);
+}
+
+.flex { display: flex; }
+.js { justify-content: start; }
+.jc { justify-content: center; }
+.je { justify-content: flex-end; }
+.jsb { justify-content: space-between; }
+.ac { align-items: center; }
+.fr { flex-direction: row; }
+.fc { flex-direction: column; }
+
+.w100per {
+    width: 100%;
+}
+
+.cw { color: white; }
+.cg { color: RGBA(0,0,0,.4); }
+.cb { color: RGB(51,51,51); }
+
+.blurred {
+    filter: blur(1px);
+}
+
+h1, h2, h3 {
+    font-size: 3rem;
+    font-weight: bold;
+    text-align: center;
+}
+h2 { font-size: 2rem; }
+h3 { font-size: 1.8rem; }
+img {
+    display: block;
+    position: relative;
+    max-height: 100%;
+    width: 100%;
+    max-width: 100%;
+    object-fit: cover;
 }
