--- a/main/templates/detailed_image_view.html
+++ b/main/templates/detailed_image_view.html
@@ -7,9 +7,9 @@
 {% endblock title %}
 
 {% block content %}
-    {% if report_from.data %}
+    {% if report_form.data %}
         <div class="report-wrapper modal-window" data-window="report-wrapper">
-            <h1 class="cw">Report sent</h1>
+            {% include 'messages.html' with messages=messages %}
         </div>
     {% else %}
         <div class="report-wrapper dn modal-window" data-window="report-wrapper">
@@ -17,9 +17,9 @@
             <form class="report-form mt15px" method="post">
                 {% csrf_token %}
                 <h3 class="cg">Title</h3>
-                {{ report_from.title }}
+                {{ report_form.title }}
                 <h3 class="cg mt15px">Description</h3>
-                {{ report_from.body }}
+                {{ report_form.body }}
                 <button class="button middle button--blue mt15px" type="submit">Send</button>
             </form>
         </div>
