--- a/static/css/index.css
+++ b/static/css/index.css
@@ -56,6 +56,8 @@
     width: 30%;
     text-align: center;
     margin-bottom: 5px;
+    background: white;
+    border-radius: 4px;
 }
 .messages__item:last-child { margin-bottom: 0; }
 /*.messages__item.error {*/
