Refactoring Image.save

--- a/main/templates/detailed_image_view.html
+++ b/main/templates/detailed_image_view.html
@@ -128,6 +128,10 @@
                                             <td class="cg">{{ image.size }} MB</td>
                                         </tr>
                                         <tr>
+                                            <td class="pr10px">Extension:</td>
+                                            <td class="cg">{{ image.width }}px x {{ image.height }}px</td>
+                                        </tr>
+                                        <tr>
                                             <td class="pr10px">Resolution:</td>
                                             <td class="cg">{{ image.width }}px x {{ image.height }}px</td>
                                         </tr>
