--- a/accounts/templates/settings.html
+++ b/accounts/templates/settings.html
@@ -7,6 +7,7 @@
 {% endblock title %}
 
 {% block content %}
+    {% include 'header.html' %}
     {% if messages %}
         {% include 'messages.html' with messages=messages %}
     {% else %}
@@ -107,7 +108,8 @@
             </div>
         </section>
     </form>
-{% endif %}
+    {% endif %}
+    {% include 'footer.html' %}
 {% endblock content %}
 {% block js %}
     <script src="{% static 'js/modules/functions/view_uploaded_image.js' %}"></script>
