--- a/main/templates/add.html
+++ b/main/templates/add.html
@@ -8,6 +8,16 @@
 
 {% block content %}
     {% include 'header.html' %}
+    {% if image_form.errors %}
+                {% for field in image_form %}
+                    {% for error in field.errors %}
+                        <h2 class="cg">{{ error|escape }}</h2>
+                    {% endfor %}
+                {% endfor %}
+                {% for error in image_form.non_field_errors %}
+                    <h2 class="cg">{{ error|escape }}</h2>
+                {% endfor %}
+            {% endif %}
     <section class="add-images-section">
         {% include "messages.html" with messages=messages %}
         <form class="add-images__form" method="post" enctype="multipart/form-data">
@@ -38,7 +48,7 @@
                     {{ image_form.tags }}
                 </div>
             </div>
-            <div class="mt15px g-recaptcha" data-sitekey="6Lecnb0aAAAAAHafnFtb-7NZUQj0GYOEmB8Fh6lS"></div>
+{#            <div class="mt15px g-recaptcha" data-sitekey="6Lecnb0aAAAAAHafnFtb-7NZUQj0GYOEmB8Fh6lS"></div>#}
             <button class="button button--blue middle mt15px" type="submit">Enter</button>
         </form>
     </section>
@@ -48,6 +58,6 @@
 {% block js %}
     <script src="{% static 'js/modules/functions/view_uploaded_image.js' %}"></script>
     <script src="{% static 'js/pages/main/add_image.js' %}"></script>
-    <script src='https://www.google.com/recaptcha/api.js'></script>
+{#    <script src='https://www.google.com/recaptcha/api.js'></script>#}
     {{ image_form.media }}
 {% endblock %}
