Added field extension to Image model

--- a/main/templates/detailed_image_view.html
+++ b/main/templates/detailed_image_view.html
@@ -129,7 +129,7 @@
                                         </tr>
                                         <tr>
                                             <td class="pr10px">Extension:</td>
-                                            <td class="cg">{{ image.width }}px x {{ image.height }}px</td>
+                                            <td class="cg">{{ image.extension }}</td>
                                         </tr>
                                         <tr>
                                             <td class="pr10px">Resolution:</td>
