--- a/templates/image-block.html
+++ b/templates/image-block.html
@@ -17,7 +17,7 @@
             </a>
             <div class="image__options">
                 <span id="rating_{{ image.pk }}" class="rating mr5px">{{ image.rating }}</span>
-                <button class="button mr10px rating-button" data-pk="{{ image.pk }}" data-counter="rating_{{ image.pk }}">
+                <button class="button mr10px rating-button" data-pk="{{ image.pk }}" data-counter="rating_{{ image.pk }}" data-data="1">
                 {% with image.followers.all as followers %}
                 {% with followers.0 as follower %}
                 {% if follower %}
@@ -57,7 +57,7 @@
                 {% endif %}
                 </button>
                 <span id="downloads_{{ image.pk }}" class="downloads mr5px">{{ image.downloads }}</span>
-                <a href="{% url 'main:download_image' slug=image.slug %}" class="button mr10px download-button download {% if followers.0.downloaded %}downloaded{% endif %}" data-pk="{{ image.pk }}" data-counter="downloads_{{ image.pk }}">
+                <a href="{% url 'main:download_image' slug=image.slug %}" class="button mr10px download-button download {% if followers.0.downloaded %}downloaded{% endif %}" data-pk="{{ image.pk }}" data-counter="downloads_{{ image.pk }}" data-data="1">
                     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="100%" width="100%" version="1.1" x="0px" y="0px" viewBox="0 0 100 100" xml:space="preserve">
                         <g>
                             <path d="M72.2,43.2L58,57.4V17c0-2.2-1.8-4-4-4s-4,1.8-4,4v40.4L35.8,43.2c-1.6-1.6-4.1-1.6-5.7,0c-1.6,1.6-1.6,4.1,0,5.7l21,21   C52,70.7,53,71,54,71s2-0.4,2.8-1.2l21-21c1.6-1.6,1.6-4.1,0-5.7C76.3,41.6,73.8,41.6,72.2,43.2z"></path>
